syntax = "proto3";

package kurtome.dote.proto.api.action;

import "api/dotable.proto";

message GetDotableListRequest {
  int32 max_results = 1;
}

message GetDotableListResponse {
  repeated api.Dotable dotables = 1;
}